--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,14 @@
 *.pch
 
 # Libraries
-*.lib
-*.a
+#*.lib
+#*.a
 *.la
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
+#*.dll
+#*.so
 *.so.*
 *.dylib
 
@@ -44,6 +44,7 @@
 
 # Kernel Module Compile Results
 *.mod*
+#*.cmd
 .tmp_versions/
 modules.order
 Module.symvers
