Latest private compiled libraries
The minimum libraries needed to be used with the public libraries.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,143 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+bin/linux.a/x64/libLinkar.Commands.Direct.a
+bin/linux.a/x64/libLinkar.Commands.Persistent.a
+bin/linux.a/x64/libLinkar.Functions.a
+bin/linux.a/x64/libLinkar.Functions.Direct.a
+bin/linux.a/x64/libLinkar.Functions.Direct.JSON.a
+bin/linux.a/x64/libLinkar.Functions.Direct.MV.a
+bin/linux.a/x64/libLinkar.Functions.Direct.TABLE.a
+bin/linux.a/x64/libLinkar.Functions.Direct.XML.a
+bin/linux.a/x64/libLinkar.Functions.Persistent.a
+bin/linux.a/x64/libLinkar.Functions.Persistent.JSON.a
+bin/linux.a/x64/libLinkar.Functions.Persistent.MV.a
+bin/linux.a/x64/libLinkar.Functions.Persistent.TABLE.a
+bin/linux.a/x64/libLinkar.Functions.Persistent.XML.a
+bin/linux.a/x86/libLinkar.Commands.Direct.a
+bin/linux.a/x86/libLinkar.Commands.Direct.JSON.a
+bin/linux.a/x86/libLinkar.Commands.Direct.XML.a
+bin/linux.a/x86/libLinkar.Commands.Persistent.a
+bin/linux.a/x86/libLinkar.Functions.a
+bin/linux.a/x86/libLinkar.Functions.Direct.a
+bin/linux.a/x86/libLinkar.Functions.Direct.JSON.a
+bin/linux.a/x86/libLinkar.Functions.Direct.MV.a
+bin/linux.a/x86/libLinkar.Functions.Direct.TABLE.a
+bin/linux.a/x86/libLinkar.Functions.Direct.XML.a
+bin/linux.a/x86/libLinkar.Functions.Persistent.a
+bin/linux.a/x86/libLinkar.Functions.Persistent.JSON.a
+bin/linux.a/x86/libLinkar.Functions.Persistent.MV.a
+bin/linux.a/x86/libLinkar.Functions.Persistent.TABLE.a
+bin/linux.a/x86/libLinkar.Functions.Persistent.XML.a
+bin/linux.so/x64/libLinkar.Commands.Direct.so
+bin/linux.so/x64/libLinkar.Commands.Persistent.so
+bin/linux.so/x64/libLinkar.Functions.Direct.JSON.so
+bin/linux.so/x64/libLinkar.Functions.Direct.MV.so
+bin/linux.so/x64/libLinkar.Functions.Direct.so
+bin/linux.so/x64/libLinkar.Functions.Direct.TABLE.so
+bin/linux.so/x64/libLinkar.Functions.Direct.XML.so
+bin/linux.so/x64/libLinkar.Functions.Persistent.JSON.so
+bin/linux.so/x64/libLinkar.Functions.Persistent.MV.so
+bin/linux.so/x64/libLinkar.Functions.Persistent.so
+bin/linux.so/x64/libLinkar.Functions.Persistent.TABLE.so
+bin/linux.so/x64/libLinkar.Functions.Persistent.XML.so
+bin/linux.so/x64/libLinkar.Functions.so
+bin/linux.so/x64/libLinkar.Strings.so
+bin/linux.so/x86/libLinkar.Commands.Direct.so
+bin/linux.so/x86/libLinkar.Commands.Persistent.so
+bin/linux.so/x86/libLinkar.Functions.Direct.JSON.so
+bin/linux.so/x86/libLinkar.Functions.Direct.MV.so
+bin/linux.so/x86/libLinkar.Functions.Direct.so
+bin/linux.so/x86/libLinkar.Functions.Direct.TABLE.so
+bin/linux.so/x86/libLinkar.Functions.Direct.XML.so
+bin/linux.so/x86/libLinkar.Functions.Persistent.JSON.so
+bin/linux.so/x86/libLinkar.Functions.Persistent.MV.so
+bin/linux.so/x86/libLinkar.Functions.Persistent.so
+bin/linux.so/x86/libLinkar.Functions.Persistent.TABLE.so
+bin/linux.so/x86/libLinkar.Functions.Persistent.XML.so
+bin/linux.so/x86/libLinkar.Functions.so
+bin/linux.so/x86/libLinkar.Strings.so
+bin/DLL/x64/Linkar.Commands.Direct.dll
+bin/DLL/x64/Linkar.Commands.Direct.lib
+bin/DLL/x64/Linkar.Commands.Persistent.dll
+bin/DLL/x64/Linkar.Commands.Persistent.lib
+bin/DLL/x64/Linkar.Functions.Direct.dll
+bin/DLL/x64/Linkar.Functions.Direct.JSON.dll
+bin/DLL/x64/Linkar.Functions.Direct.JSON.lib
+bin/DLL/x64/Linkar.Functions.Direct.lib
+bin/DLL/x64/Linkar.Functions.Direct.MV.dll
+bin/DLL/x64/Linkar.Functions.Direct.MV.lib
+bin/DLL/x64/Linkar.Functions.Direct.TABLE.dll
+bin/DLL/x64/Linkar.Functions.Direct.TABLE.lib
+bin/DLL/x64/Linkar.Functions.Direct.XML.dll
+bin/DLL/x64/Linkar.Functions.Direct.XML.lib
+bin/DLL/x64/Linkar.Functions.dll
+bin/DLL/x64/Linkar.Functions.lib
+bin/DLL/x64/Linkar.Functions.Persistent.dll
+bin/DLL/x64/Linkar.Functions.Persistent.JSON.dll
+bin/DLL/x64/Linkar.Functions.Persistent.JSON.lib
+bin/DLL/x64/Linkar.Functions.Persistent.lib
+bin/DLL/x64/Linkar.Functions.Persistent.MV.dll
+bin/DLL/x64/Linkar.Functions.Persistent.MV.lib
+bin/DLL/x64/Linkar.Functions.Persistent.TABLE.dll
+bin/DLL/x64/Linkar.Functions.Persistent.TABLE.lib
+bin/DLL/x64/Linkar.Functions.Persistent.XML.dll
+bin/DLL/x64/Linkar.Functions.Persistent.XML.lib
+bin/DLL/x64/Linkar.Strings.dll
+bin/DLL/x64/Linkar.Strings.lib
+bin/LIB/x64/Linkar.Commands.Direct.lib
+bin/LIB/x64/Linkar.Commands.Persistent.lib
+bin/LIB/x64/Linkar.Functions.Direct.JSON.lib
+bin/LIB/x64/Linkar.Functions.Direct.lib
+bin/LIB/x64/Linkar.Functions.Direct.MV.lib
+bin/LIB/x64/Linkar.Functions.Direct.TABLE.lib
+bin/LIB/x64/Linkar.Functions.Direct.XML.lib
+bin/LIB/x64/Linkar.Functions.lib
+bin/LIB/x64/Linkar.Functions.Persistent.JSON.lib
+bin/LIB/x64/Linkar.Functions.Persistent.lib
+bin/LIB/x64/Linkar.Functions.Persistent.MV.lib
+bin/LIB/x64/Linkar.Functions.Persistent.TABLE.lib
+bin/LIB/x64/Linkar.Functions.Persistent.XML.lib
+bin/LIB/x64/Linkar.Strings.lib
+bin/DLL/x86/Linkar.Commands.Direct.dll
+bin/DLL/x86/Linkar.Commands.Direct.lib
+bin/DLL/x86/Linkar.Commands.Persistent.dll
+bin/DLL/x86/Linkar.Commands.Persistent.lib
+bin/DLL/x86/Linkar.Functions.Direct.dll
+bin/DLL/x86/Linkar.Functions.Direct.JSON.dll
+bin/DLL/x86/Linkar.Functions.Direct.JSON.lib
+bin/DLL/x86/Linkar.Functions.Direct.lib
+bin/DLL/x86/Linkar.Functions.Direct.MV.dll
+bin/DLL/x86/Linkar.Functions.Direct.MV.lib
+bin/DLL/x86/Linkar.Functions.Direct.TABLE.dll
+bin/DLL/x86/Linkar.Functions.Direct.TABLE.lib
+bin/DLL/x86/Linkar.Functions.Direct.XML.dll
+bin/DLL/x86/Linkar.Functions.Direct.XML.lib
+bin/DLL/x86/Linkar.Functions.dll
+bin/DLL/x86/Linkar.Functions.lib
+bin/DLL/x86/Linkar.Functions.Persistent.dll
+bin/DLL/x86/Linkar.Functions.Persistent.JSON.dll
+bin/DLL/x86/Linkar.Functions.Persistent.JSON.lib
+bin/DLL/x86/Linkar.Functions.Persistent.lib
+bin/DLL/x86/Linkar.Functions.Persistent.MV.dll
+bin/DLL/x86/Linkar.Functions.Persistent.MV.lib
+bin/DLL/x86/Linkar.Functions.Persistent.TABLE.dll
+bin/DLL/x86/Linkar.Functions.Persistent.TABLE.lib
+bin/DLL/x86/Linkar.Functions.Persistent.XML.dll
+bin/DLL/x86/Linkar.Functions.Persistent.XML.lib
+bin/DLL/x86/Linkar.Strings.dll
+bin/DLL/x86/Linkar.Strings.lib
+bin/LIB/x86/Linkar.Commands.Direct.lib
+bin/LIB/x86/Linkar.Commands.Persistent.lib
+bin/LIB/x86/Linkar.Functions.Direct.JSON.lib
+bin/LIB/x86/Linkar.Functions.Direct.lib
+bin/LIB/x86/Linkar.Functions.Direct.MV.lib
+bin/LIB/x86/Linkar.Functions.Direct.TABLE.lib
+bin/LIB/x86/Linkar.Functions.Direct.XML.lib
+bin/LIB/x86/Linkar.Functions.lib
+bin/LIB/x86/Linkar.Functions.Persistent.JSON.lib
+bin/LIB/x86/Linkar.Functions.Persistent.lib
+bin/LIB/x86/Linkar.Functions.Persistent.MV.lib
+bin/LIB/x86/Linkar.Functions.Persistent.TABLE.lib
+bin/LIB/x86/Linkar.Functions.Persistent.XML.lib
+bin/LIB/x86/Linkar.Strings.lib
